--- a/public/index.html
+++ b/public/index.html
@@ -132,10 +132,37 @@
             </div>
         </main>
         <footer>
-            <ul>
-                <li><a href="">Impressum</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
+            <div class="footer--content">
+                <div x-data="{ open: false }">
+                    <button class="button button1" @click="open = ! open">Impressum</button>
+
+                    <div x-show="open" x-transition:enter="transition ease-out duration-300"
+                        x-transition:enter-start="opacity-0 transform scale-90"
+                        x-transition:enter-end="opacity-100 transform scale-100"
+                        x-transition:leave="transition ease-in duration-300"
+                        x-transition:leave-start="opacity-100 transform scale-100"
+                        x-transition:leave-end="opacity-0 transform scale-90">
+                        <p>Xaver Gruber</p>
+                        <p>IT Dienstleister</p>
+                        <p> 1170 Wien</p>
+                    </div>
+                </div>
+                <div x-data="{ open: false }">
+                    <button class="button button1" @click="open = ! open">Contact</button>
+
+                    <div x-show="open" x-transition:enter="transition ease-out duration-300"
+                        x-transition:enter-start="opacity-0 transform scale-90"
+                        x-transition:enter-end="opacity-100 transform scale-100"
+                        x-transition:leave="transition ease-in duration-300"
+                        x-transition:leave-start="opacity-100 transform scale-100"
+                        x-transition:leave-end="opacity-0 transform scale-90">
+                        <p>Xaver Gruber</p>
+                        <p>IT Dienstleister</p>
+                        <p> 1170 Wien</p>
+                    </div>
+                </div>
+
+            </div>
         </footer>
     </div>
 
