--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css" />
     <script defer src="https://unpkg.com/alpinejs@3.5.0/dist/cdn.min.js"></script>
 
@@ -123,6 +124,7 @@
                                     <div class="card--text" x-text="project.type"></div>
                                     <div class="card--text" x-text="project.name"></div>
                                     <div class="card--text" x-text="project.description"></div>
+                                    <div class="share"><a target="_blank" href="https://www.reddit.com/"><img src="img\share-solid.svg" alt=""></a></div>
                                 </div>
                             </template>
                         </div>
@@ -157,9 +159,15 @@
                         x-transition:leave="transition ease-in duration-2000"
                         x-transition:leave-start="opacity-100 transform scale-100"
                         x-transition:leave-end="opacity-0 transform scale-90">
-                        <p>Xaver Gruber</p>
-                        <p>IT Dienstleister</p>
-                        <p> 1170 Wien</p>
+                        <p>Betrieb einer Webseite
+Bei der Einrichtung einer eigenen Unternehmens-Website sind verschiedenste Rechtsmaterien zu beachten. Hier sind nur die Wichtigsten angeführt:
+
+Das Mediengesetz: Jede Website muss ein Impressum (bzw. eine Offenlegung) aufweisen, das zumindest Name und Anschrift des Medieninhabers sowie den Unternehmensgegenstand enthält. Abhängig von den veröffentlichten Inhalten können noch zusätzliche Informationen (grundlegende Ausrichtung, Eigentümerstruktur, Vertretungsorgane, Beteiligungen etc.) notwendig werden.
+Das E-Commerce-Gesetz: Sofern über die Website Online-Geschäfte abgewickelt werden sollen, sind weitere Angaben nach § 5 ECG (Kontaktadressen, Firmenbuchnummer, zuständige Behörden und Vertretungen etc.) zu machen.
+Das Telekommunikationsgesetz: Wenn Cookies eingesetzt oder Benutzerzugriffe protokolliert werden, müssen die Betroffenen darüber in geeigneter Weise informiert werden. Die Ermittlung dieser Daten darf nur nach Zustimmung der Benutzerinnen und Benutzer erfolgen. Im mindesten Fall müssen ihnen Möglichkeiten angeboten werden, die Datenermittlung zu unterbinden.
+Die DSGVO und das DSG kommen bei persönlichen Anmeldungen und Beiträgen der Benutzerinnen und Benutzer, aber auch bei über die Website erhobenen Daten, zum Beispiel zur Zusendung von Informationsmaterial, ins Spiel. Es ist außerdem hinsichtlich der Verwendung personenbezogener Daten (Cookies, IP-Adressen) zu beachten.
+Das Urheberrechtsgesetz regelt die Nutzung und Kennzeichnung von fremden Inhalten wie Fotos, Filmen, Tonaufnahmen oder Programmcode auf der eigenen Website. Bei Links zu anderen Websites muss erkennbar sein, dass es sich um fremde Inhalte handelt; außerdem dürfen keine geschützten Inhalte zugänglich gemacht werden.
+Vor allem dann, wenn Sie über Ihre Website Online-Geschäfte abwickeln wollen, kann die gesetzeskonforme Umsetzung und Gestaltung schwierig werden. Die WKO stellt für diese Zwecke eigene Informationsangebote zur Verfügung. In vielen Fällen kann es aber auch erforderlich sein, professionelle Hilfe in Anspruch zu nehmen.</p>
                     </div>
                 </div>
 
